welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:43: error: expected class or object definition
def patern()
^PatternPicture:44: error: expected class or object definition
{
^PatternPicture:63: error: expected class or object definition
{patern();
^PatternPicture:75: error: Unmatched closing brace '}' ignored here
}
^